k8s/apps/glance/glance-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glance
  labels:
    app: glance
spec:
  replicas: 1
  selector:
    matchLabels:
      app: glance
  template:
    metadata:
      labels:
        app: glance
    spec:
      containers:
        - name: glance
          image: glanceapp/glance:v0.8.6@sha256:9dfb09470b207dcb67ac715994bdb1929374ba3f9c0d7df7462c24adf10fd073
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 32Mi
            limits:
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: config
              mountPath: /app/config/glance.yml
              subPath: glance.yml
            - name: config
              mountPath: /app/config/home.yml
              subPath: home.yml
            - name: config
              mountPath: /app/assets/user.css
              subPath: user.css
      volumes:
        - name: config
          configMap:
            name: glance-config
