k8s/apps/glance/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: glance
spec:
  selector:
    app: glance
  ports:
    - port: 8080
      targetPort: 8080
